--- a/src/app/components/todos-list/todos-list.component.html
+++ b/src/app/components/todos-list/todos-list.component.html
@@ -4,7 +4,7 @@
 <mat-label>
     Enter a TODO and press Enter
 </mat-label>
-<input matInput #input>
+<input matInput #input (keyup.enter)="onAddTodo(input.value)">
 <mat-icon matSuffix>edit</mat-icon>
 </mat-form-field>
 
@@ -21,13 +21,15 @@
     
     @for(todo of store.todos(); track todo.id; let index = $index){
 
-        <mat-list-option>
+        <mat-list-option [selected]="todo.completed" (selectedChange)="onTodoToggle(todo.id, $event)">
             <div class="todo-item">
-                <mat-icon>delete</mat-icon>
-                <span>{{todo.title}}</span>
+                <mat-icon class="delete-todo" (click)="onDeleteTodo(todo.id, $event)">delete</mat-icon>
+                <span [ngStyle]="{'text-decoration': todo.completed ? 'line-through' : 'none'}">{{todo.title}}</span>
             </div>
         </mat-list-option>
 
     }
 
 </mat-selection-list>
+
+<!-- TODO: 56:34 -->
