--- a/src/app/components/todos-list/todos-list.component.html
+++ b/src/app/components/todos-list/todos-list.component.html
@@ -10,7 +10,7 @@
 
 <br />
 
-<mat-button-toggle-group #filter>
+<mat-button-toggle-group #filter (change)="onFilterTodos($event)">
     <mat-button-toggle value="all">All</mat-button-toggle>
     <mat-button-toggle value="pending">Pending</mat-button-toggle>
     <mat-button-toggle value="completed">Completed</mat-button-toggle>
@@ -18,18 +18,24 @@
 
 
 <mat-selection-list class="todos-list">
-    
-    @for(todo of store.todos(); track todo.id; let index = $index){
+    <!-- instead of accessing all the "todos()" just access the "filteredTodos()" -->
+    @for(todo of store.filteredTodos(); track todo.id;){
 
+        <!-- THIS IMPLEMENTATION RUNS MULTIPLE SELECT EVENTS SOMETIMES (BUGGY), WILL LOOP THROUGH ALL THE TODOS AND CHECK THEM OR UNCHECK THEM
         <mat-list-option [selected]="todo.completed" (selectedChange)="onTodoToggle(todo.id, $event)">
             <div class="todo-item">
                 <mat-icon class="delete-todo" (click)="onDeleteTodo(todo.id, $event)">delete</mat-icon>
                 <span [ngStyle]="{'text-decoration': todo.completed ? 'line-through' : 'none'}">{{todo.title}}</span>
             </div>
         </mat-list-option>
+         -->
 
+        <div>
+            <div class="todo-item" (click)="onTodoToggle(todo.id, !todo.completed)">
+                <mat-icon class="delete-todo" (click)="onDeleteTodo(todo.id, $event)">delete</mat-icon>
+                <span [ngStyle]="{'text-decoration': todo.completed ? 'line-through' : 'none'}">{{todo.title}}</span>
+            </div>
+        </div>
     }
 
 </mat-selection-list>
-
-<!-- TODO: 56:34 -->
